update last execution date

--- a/plugins/scheduled_task/config/permissions.ini
+++ b/plugins/scheduled_task/config/permissions.ini
@@ -29,7 +29,7 @@ scheduledTaskAdd.permissions = scheduledTask.SYSTEM_ADMIN_MANAGE, PARTNER_-2_GRO
 scheduledTaskUpdate.service = scheduledTask_scheduledTaskProfile
 scheduledTaskUpdate.action = update
 scheduledTaskUpdate.partnerId = 0
-scheduledTaskUpdate.permissions = -2>scheduledTask.SYSTEM_ADMIN_MANAGE, -2>PARTNER_-2_GROUP_*_PERMISSION, -1>BATCH_BASE
+scheduledTaskUpdate.permissions = -2>scheduledTask.SYSTEM_ADMIN_MANAGE, -2>PARTNER_-2_GROUP_*_PERMISSION, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION
 
 scheduledTaskGet.service = scheduledTask_scheduledTaskProfile
 scheduledTaskGet.action = get
