add BulkUploadFilter and update release notes

--- a/configurations/plugins.template.ini
+++ b/configurations/plugins.template.ini
@@ -44,6 +44,7 @@ ShortLink
 BulkUpload
 BulkUploadCsv
 BulkUploadXml
+BulkUploadFilter
 MetadataBulkUploadXml
 MetadataBulkUploadXmlEngine
 ContentDistributionBulkUploadXml
