--- a/deployment/permissions/service.playready.playreadydrm.ini
+++ b/deployment/permissions/service.playready.playreadydrm.ini
@@ -10,12 +10,12 @@ permissionItem1.permissions = -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION
 
 permissionItem2.service = playready_playreadydrm
 permissionItem2.action = getentrycontentkey
-permissionItem2.partnerId = -2
+permissionItem2.partnerId = -1
 permissionItem2.param3 = 
 permissionItem2.param4 = 
 permissionItem2.param5 = 
 permissionItem2.tags = 
-permissionItem2.permissions = playReady.PLAY_READY_ADMIN, PARTNER_-2_GROUP_*_PERMISSION
+permissionItem2.permissions = -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION
 
 permissionItem3.service = playready_playreadydrm
 permissionItem3.action = getcontentkeys
