Support VOD to Live using live-channels - demo only PLAT-630 #time 1d

--- a/configurations/generator.ini
+++ b/configurations/generator.ini
@@ -48,9 +48,11 @@ generator = Xml2As3ClientGenerator
 exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk
 params.type = flex_client
 ignore = KalturaUploadedFileResource, KalturaCopyJobData
+generateDocs = true
+
+[mediaServerClient : java]
 internal = true
 nopackage = true
-generateDocs = true
 
 [xml : all]
 generator = XmlClientGenerator
