--- a/deployment/permissions/service.baseentry.ini
+++ b/deployment/permissions/service.baseentry.ini
@@ -168,7 +168,7 @@ permissionItem19.param3 =
 permissionItem19.param4 = 
 permissionItem19.param5 = 
 permissionItem19.tags = 
-permissionItem19.permissions = LIVE_STREAM_UPDATE, CONTENT_MANAGE_SCHEDULE, CONTENT_MANAGE_ACCESS_CONTROL, CONTENT_MANAGE_METADATA, CONTENT_MODERATE_METADATA, CONTENT_MANAGE_THUMBNAIL, CONTENT_INGEST_UPLOAD, CONTENT_MANAGE_ASSIGN_CATEGORIES, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION
+permissionItem19.permissions = LIVE_STREAM_UPDATE, CONTENT_MANAGE_SCHEDULE, CONTENT_MANAGE_ACCESS_CONTROL, CONTENT_MANAGE_METADATA, CONTENT_MODERATE_METADATA, CONTENT_MANAGE_THUMBNAIL, CONTENT_INGEST_UPLOAD, CONTENT_MANAGE_ASSIGN_CATEGORIES, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION, -5>PARTNER_-5_GROUP_*_PERMISSION
 
 permissionItem20.service = baseentry
 permissionItem20.action = updatecontent
