--- a/deployment/permissions/service.flavorasset.ini
+++ b/deployment/permissions/service.flavorasset.ini
@@ -105,7 +105,7 @@ permissionItem12.param3 =
 permissionItem12.param4 = 
 permissionItem12.param5 = 
 permissionItem12.tags = 
-permissionItem12.permissions = CONTENT_MANAGE_BASE, -2>SYSTEM_ADMIN_ENTRY_INVESTIGATION, -2>PARTNER_-2_GROUP_*_PERMISSION, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION
+permissionItem12.permissions = CONTENT_MANAGE_BASE, -2>SYSTEM_ADMIN_ENTRY_INVESTIGATION, -2>PARTNER_-2_GROUP_*_PERMISSION, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION, -5>PARTNER_-5_GROUP_*_PERMISSION
 
 permissionItem13.service = flavorasset
 permissionItem13.action = reconvert
