--- a/deployment/permissions/service.filesync.filesync.ini
+++ b/deployment/permissions/service.filesync.filesync.ini
@@ -15,5 +15,5 @@ permissionItem2.param3 =
 permissionItem2.param4 = 
 permissionItem2.param5 = 
 permissionItem2.tags = 
-permissionItem2.permissions = BATCH_BASE, PARTNER_-1_GROUP_*_PERMISSION
+permissionItem2.permissions = BATCH_BASE, PARTNER_-1_GROUP_*_PERMISSION, MEDIA_SERVER_BASE, -5>PARTNER_-5_GROUP_*_PERMISSION
 
