restore password to default.

--- a/generator/sources/php53/tests/config.ini
+++ b/generator/sources/php53/tests/config.ini
@@ -1,4 +1,4 @@
 serviceUrl = http://www.kaltura.com/
-partnerId = 867352
-adminSecret = e842756d94dacf813e04db720fee9119
+partnerId = 54321
+adminSecret = YOUR_ADMIN_SECRET
 userId = testUser
