--- a/deployment/permissions/service.livechannel.ini
+++ b/deployment/permissions/service.livechannel.ini
@@ -12,7 +12,7 @@ permissionItem2.permissions = LIVE_CHANNEL_UPDATE
 permissionItem3.service = liveChannel
 permissionItem3.action = get
 permissionItem3.partnerId = 0
-permissionItem3.permissions = CONTENT_MANAGE_BASE, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION
+permissionItem3.permissions = CONTENT_MANAGE_BASE, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION, -5>PARTNER_-5_GROUP_*_PERMISSION
 
 permissionItem5.service = liveChannel
 permissionItem5.action = list
