--- a/deployment/permissions/service.filesync.filesync.ini
+++ b/deployment/permissions/service.filesync.filesync.ini
@@ -6,7 +6,7 @@ permissionItem1.param3 =
 permissionItem1.param4 = 
 permissionItem1.param5 = 
 permissionItem1.tags = 
-permissionItem1.permissions = SYSTEM_FILESYNC, SYSTEM_ADMIN_ENTRY_INVESTIGATION, PARTNER_-2_GROUP_*_PERMISSION
+permissionItem1.permissions = SYSTEM_FILESYNC, SYSTEM_ADMIN_ENTRY_INVESTIGATION, PARTNER_-2_GROUP_*_PERMISSION, -5>PARTNER_-5_GROUP_*_PERMISSION
 
 permissionItem2.service = filesync_filesync
 permissionItem2.action = sync
@@ -15,5 +15,5 @@ permissionItem2.param3 =
 permissionItem2.param4 = 
 permissionItem2.param5 = 
 permissionItem2.tags = 
-permissionItem2.permissions = BATCH_BASE, PARTNER_-1_GROUP_*_PERMISSION, MEDIA_SERVER_BASE, -5>PARTNER_-5_GROUP_*_PERMISSION
+permissionItem2.permissions = BATCH_BASE, PARTNER_-1_GROUP_*_PERMISSION, MEDIA_SERVER_BASE
 
