moved filter engine implementation to the batch side

--- a/plugins/scheduled_task/config/generator.ini
+++ b/plugins/scheduled_task/config/generator.ini
@@ -2,7 +2,8 @@
 exclude = scheduledTask_scheduledTaskProfile.*
 
 [batchClient]
-include = scheduledTask_scheduledTaskProfile.list, scheduledTask_scheduledTaskProfile.update, scheduledTask_scheduledTaskProfile.query
+include = scheduledTask_scheduledTaskProfile.list, scheduledTask_scheduledTaskProfile.update, scheduledTask_scheduledTaskProfile.get
+additional = KalturaObjectListResponse
 
 [php5ZendClientVarConsole]
 exclude = scheduledTask_scheduledTaskProfile.*
