--- a/plugins/scheduled_task/config/permissions.ini
+++ b/plugins/scheduled_task/config/permissions.ini
@@ -34,7 +34,7 @@ scheduledTaskUpdate.permissions = -2>scheduledTask.SYSTEM_ADMIN_MANAGE, -2>PARTN
 scheduledTaskGet.service = scheduledTask_scheduledTaskProfile
 scheduledTaskGet.action = get
 scheduledTaskGet.partnerId = 0
-scheduledTaskGet.permissions = scheduledTask.SCHEDULED_TASK_BASE, -2>scheduledTask.SYSTEM_ADMIN_MANAGE, -2>PARTNER_-2_GROUP_*_PERMISSION
+scheduledTaskGet.permissions = scheduledTask.SCHEDULED_TASK_BASE, -2>scheduledTask.SYSTEM_ADMIN_MANAGE, -2>PARTNER_-2_GROUP_*_PERMISSION, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION
 
 scheduledTaskDelete.service = scheduledTask_scheduledTaskProfile
 scheduledTaskDelete.action = delete
@@ -46,9 +46,14 @@ scheduledTaskList.action = list
 scheduledTaskList.partnerId = 0
 scheduledTaskList.permissions = scheduledTask.SCHEDULED_TASK_BASE, -2>scheduledTask.SYSTEM_ADMIN_MANAGE, -2>PARTNER_-2_GROUP_*_PERMISSION, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION
 
-scheduledTaskQuery.service = scheduledTask_scheduledTaskProfile
-scheduledTaskQuery.action = query
-scheduledTaskQuery.partnerId = 0
-scheduledTaskQuery.permissions = scheduledTask.SCHEDULED_TASK_BASE, -2>scheduledTask.SYSTEM_ADMIN_MANAGE, -2>PARTNER_-2_GROUP_*_PERMISSION, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION
+scheduledTaskRequestDryRun.service = scheduledTask_scheduledTaskProfile
+scheduledTaskRequestDryRun.action = requestDryRun
+scheduledTaskRequestDryRun.partnerId = 0
+scheduledTaskRequestDryRun.permissions = scheduledTask.SCHEDULED_TASK_BASE, -2>scheduledTask.SYSTEM_ADMIN_MANAGE, -2>PARTNER_-2_GROUP_*_PERMISSION
+
+scheduledTaskGetDryRunResults.service = scheduledTask_scheduledTaskProfile
+scheduledTaskGetDryRunResults.action = getDryRunResults
+scheduledTaskGetDryRunResults.partnerId = 0
+scheduledTaskGetDryRunResults.permissions = scheduledTask.SCHEDULED_TASK_BASE, -2>scheduledTask.SYSTEM_ADMIN_MANAGE, -2>PARTNER_-2_GROUP_*_PERMISSION
 
 [parameter_permission_items]
