added scheduled task to admin.template.ini

--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -460,6 +460,14 @@ moduls.eventNotification.basePermissionName =
 moduls.eventNotification.group = GROUP_ENABLE_DISABLE_FEATURES
 moduls.eventNotification.indexLink = plugin/EventNotificationTemplatesListAction/filter_type/partnerIdEqual/filter_input
 
+moduls.scheduledTask.enabled = true
+moduls.scheduledTask.permissionType = 3
+moduls.scheduledTask.label = Scheduled Tasks
+moduls.scheduledTask.permissionName = SCHEDULEDTASK_PLUGIN_PERMISSION
+moduls.scheduledTask.basePermissionType =
+moduls.scheduledTask.basePermissionName =
+moduls.scheduledTask.group = GROUP_ENABLE_DISABLE_FEATURES
+
 moduls.kmcVerifyModeration.enabled = true
 moduls.kmcVerifyModeration.permissionType = 3
 moduls.kmcVerifyModeration.label = KMC Verify Moderation
