--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -607,7 +607,7 @@ moduls.kontiki.group = GROUP_ENABLE_DISABLE_FEATURES
 
 moduls.purgeFilesOnDelete.enabled = true
 moduls.purgeFilesOnDelete.permissionType = 2
-moduls.purgeFilesOnDelete.label = Purge files on deletion
+moduls.purgeFilesOnDelete.label = "Purge files on deletion"
 moduls.purgeFilesOnDelete.permissionName = PURGE_FILES_ON_DELETE
 moduls.purgeFilesOnDelete.basePermissionType =
 moduls.purgeFilesOnDelete.basePermissionName =
