Enable live params only to partner with live-stream permission

--- a/deployment/base/scripts/init_data/04.liveParams.ini
+++ b/deployment/base/scripts/init_data/04.liveParams.ini
@@ -25,6 +25,7 @@ creationMode=1
 deinterlice=0
 rotate=0
 type=3
+requiredPermissions = FEATURE_LIVE_STREAM
 
 
 
@@ -60,6 +61,7 @@ deinterlice=0
 rotate=0
 engineVersion=0
 type=3
+requiredPermissions = FEATURE_LIVE_STREAM
 
 
 
@@ -95,6 +97,7 @@ deinterlice=0
 rotate=0
 engineVersion=0
 type=3
+requiredPermissions = FEATURE_LIVE_STREAM
 
 
 
@@ -130,4 +133,5 @@ deinterlice=0
 rotate=0
 engineVersion=0
 type=3
+requiredPermissions = FEATURE_LIVE_STREAM
 
