Support multiple live source ingestion PLAT-558 #time 2h

--- a/deployment/base/scripts/init_data/04.liveParams.ini
+++ b/deployment/base/scripts/init_data/04.liveParams.ini
@@ -5,7 +5,7 @@ version=0
 partnerId=0
 name="Source"
 systemName="Source"
-tags=source
+tags=source,ingest
 description="Maintains the original format and settings of the input stream"
 readyBehavior=0
 isDefault=1
@@ -26,6 +26,7 @@ deinterlice=0
 rotate=0
 type=3
 requiredPermissions = FEATURE_LIVE_STREAM
+streamSuffix = 1
 
 
 
@@ -135,3 +136,60 @@ engineVersion=0
 type=3
 requiredPermissions = FEATURE_LIVE_STREAM
 
+
+[ingest_2]
+id=36
+version=0
+partnerId=0
+name="Ingest 2"
+systemName="Ingest_2"
+tags=mbr,ingest
+description="Maintains the original format and settings of the input stream"
+readyBehavior=0
+isDefault=1
+videoBitrate=0
+audioBitrate=0
+audioChannels=0
+audioSampleRate=0
+audioResolution=0
+width=0
+height=0
+frameRate=0
+gopSize=0
+twoPass=0
+viewOrder=0
+creationMode=1
+deinterlice=0
+rotate=0
+type=3
+requiredPermissions = FEATURE_LIVE_STREAM
+streamSuffix = 2
+
+
+[ingest_3]
+id=37
+version=0
+partnerId=0
+name="Ingest 3"
+systemName="Ingest_3"
+tags=mbr,ingest
+description="Maintains the original format and settings of the input stream"
+readyBehavior=0
+isDefault=1
+videoBitrate=0
+audioBitrate=0
+audioChannels=0
+audioSampleRate=0
+audioResolution=0
+width=0
+height=0
+frameRate=0
+gopSize=0
+twoPass=0
+viewOrder=0
+creationMode=1
+deinterlice=0
+rotate=0
+type=3
+requiredPermissions = FEATURE_LIVE_STREAM
+streamSuffix = 3
