Enable media server partner to list live params

--- a/deployment/permissions/partner.-5.ini
+++ b/deployment/permissions/partner.-5.ini
@@ -12,3 +12,7 @@ permission2.friendlyName = "Partner -5 permission for group *"
 permission2.description = "Partner -5 permission for group *"
 permission2.partnerGroup = *
 
+permission3.partnerId = -5
+permission3.type = 2
+permission3.name = FEATURE_LIVE_STREAM
+
