--- a/deployment/permissions/service.flavorparams.ini
+++ b/deployment/permissions/service.flavorparams.ini
@@ -24,7 +24,7 @@ permissionItem3.param3 =
 permissionItem3.param4 = 
 permissionItem3.param5 = 
 permissionItem3.tags = 
-permissionItem3.permissions = TRANSCODING_BASE
+permissionItem3.permissions = TRANSCODING_BASE, -5>PARTNER_-5_GROUP_*_PERMISSION, -5>MEDIA_SERVER_BASE
 
 permissionItem4.service = flavorparams
 permissionItem4.action = getbyconversionprofileid
