Use query string instead of path to overcome ubuntu DVR Wowza bug PLAT-761 #time 2d

--- a/deployment/permissions/object.KalturaLiveStreamEntry.ini
+++ b/deployment/permissions/object.KalturaLiveStreamEntry.ini
@@ -116,3 +116,15 @@ permissionItem13.param4 =
 permissionItem13.param5 = 
 permissionItem13.tags = 
 permissionItem13.permissions = CONTENT_MANAGE_BASE
+
+permissionItem14.object = KalturaLiveStreamEntry
+permissionItem14.parameter = primaryBroadcastingUrl
+permissionItem14.action = all
+permissionItem14.partnerId = 0
+permissionItem14.permissions = CONTENT_MANAGE_BASE
+
+permissionItem15.object = KalturaLiveStreamEntry
+permissionItem15.parameter = secondaryBroadcastingUrl
+permissionItem15.action = all
+permissionItem15.partnerId = 0
+permissionItem15.permissions = CONTENT_MANAGE_BASE
