Added commented client-config verifySSL attribute to templates

--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -46,6 +46,8 @@ settings.uiConfTypes[] = Kaltura_Client_Enum_UiConfObjType::KSR
 ; disable KCW visual editor for on-prem/ce (editor is enabled if property is true or missing)
 settings.enableKCWVisualEditor = false;
 
+;settings.clientConfig.verifySSL = false
+
 languages.english.name = "English";
 languages.english.id = "en"
 languages.german.name = "German"
