--- a/configurations/batch/batch.ini.template
+++ b/configurations/batch/batch.ini.template
@@ -74,7 +74,7 @@ enabledWorkers.KAsyncCopyPartner					= 1
 maximumExecutionTime			= 300
 params.tempDirectoryPath		= @TMP_DIR@
 engineOptions.asperaTempFolder	= @TMP_DIR@/aspera_upload
-
+;clientConfig.verifySSL = false
 
 [JobHandlerWorker : Worker]
 fileExistReties			= 3
