adding support for more than 32 categories per entry #PLAT-599 #5d

--- a/deployment/permissions/service.categoryentry.ini
+++ b/deployment/permissions/service.categoryentry.ini
@@ -53,3 +53,11 @@ permissionItem6.param5 =
 permissionItem6.tags = 
 permissionItem6.permissions = CONTENT_MANAGE_ASSIGN_CATEGORIES, BASE_USER_SESSION_PERMISSION
 
+permissionItem7.service = categoryentry
+permissionItem7.action = syncPrivacyContext
+permissionItem7.partnerId = 0
+permissionItem7.param3 = 
+permissionItem7.param4 = 
+permissionItem7.param5 = 
+permissionItem7.tags = 
+permissionItem7.permissions = -1>PARTNER_-1_GROUP_*_PERMISSION
