Upon IT request, limit the number of parralel import jobs a partner can execute.

--- a/configurations/base.ini
+++ b/configurations/base.ini
@@ -315,6 +315,9 @@ PARTNER_ID = 1
 ;BatchJobType::FILESYNC_IMPORT
 29 = 99999
 
+;BatchJobType::IMPORT
+1 = 50
+
 [job_execution_attempt]
 ;BatchJobType::NOTIFICATION
 16 = 5
