additional permission for partner 0 -required for multicast

--- a/deployment/permissions/partner.0.ini
+++ b/deployment/permissions/partner.0.ini
@@ -1217,3 +1217,12 @@ permission189.name = LIVE_CHANNEL_UPDATE
 permission189.friendlyName = "Update live channel"
 permission189.description = "Update live channel"
 
+permission190.partnerId = 0
+permission190.type = 1
+permission190.name = MEDIA_SERVER_PARTNER_LEVEL
+permission190.friendlyName = "Media Server partner-level permission"
+permission190.description = "Media Server partner-level permission"
+permission190.dependsOnPermissionNames = HYBRID_ECDN
+permission190.tags = 
+permission190.partnerGroup = 
+
