Fix broken URLs in android and objc clients

--- a/configurations/generator.ini
+++ b/configurations/generator.ini
@@ -2,7 +2,7 @@
 ; #
 ; # API Generator configuration
 ; #
-; # The order of loading classes by the generators is as followed : 
+; # The order of loading classes by the generators is as follows: 
 ; # 1.All objects that used by the services.
 ; # 2.All parent (super classes) objects of all loaded objects.
 ; # 3.All child (inherited classes) objects of all loaded objects.
@@ -127,7 +127,7 @@ exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk
 excludepaths = plugins/content_distribution/providers
 ignore = KalturaUploadedFileResource, KalturaCopyJobData
 generateDocs = true
-linkhref = https : //github.com/kaltura/AndroidReferenceApp
+linkhref = https://github.com/kaltura/AndroidReferenceApp
 linktext = "Sample app on GitHub"
 
 [flex35 : all]
@@ -158,7 +158,7 @@ exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk, document.*
 excludepaths = plugins/content_distribution/providers
 ignore = KalturaUploadedFileResource, KalturaCopyJobData
 generateDocs = true
-linkhref = https : //github.com/kaltura/IOSReferenceApp
+linkhref = https://github.com/kaltura/IOSReferenceApp
 linktext = "Sample app on GitHub"
 
 [cli : all]
