--- a/deployment/permissions/service.eventnotification.eventnotificationtemplate.ini
+++ b/deployment/permissions/service.eventnotification.eventnotificationtemplate.ini
@@ -83,10 +83,4 @@ permissionItem9.permissions = -2>eventNotification.SYSTEM_ADMIN_EVENT_NOTIFICATI
 permissionItem10.service = eventnotification_eventnotificationtemplate
 permissionItem10.action = listTemplates
 permissionItem10.partnerId = 0 
-permissionItem10.permissions = eventNotification.EVENT_NOTIFICATIONS_TEMPLATE_BASE
-
-permissionItem11.service = eventnotification_eventnotificationtemplate
-permissionItem11.action = listTemplates
-permissionItem11.partnerId = -2 
-permissionItem11.permissions = -2>eventNotification.SYSTEM_ADMIN_EVENT_NOTIFICATION_BASE
-
+permissionItem10.permissions = eventNotification.EVENT_NOTIFICATIONS_TEMPLATE_BASE, -2>eventNotification.SYSTEM_ADMIN_EVENT_NOTIFICATION_BASE, -2>PARTNER_-2_GROUP_*_PERMISSION
