adding permission of partner -2 for eventNotifications->list
SUP-1416 #time 1h

--- a/deployment/permissions/service.eventnotification.eventnotificationtemplate.ini
+++ b/deployment/permissions/service.eventnotification.eventnotificationtemplate.ini
@@ -51,7 +51,7 @@ permissionItem6.param3 =
 permissionItem6.param4 = 
 permissionItem6.param5 = 
 permissionItem6.tags = 
-permissionItem6.permissions = eventNotification.EVENT_NOTIFICATION_BASE, eventNotification.EVENT_NOTIFICATIONS_TEMPLATE_BASE
+permissionItem6.permissions = eventNotification.EVENT_NOTIFICATION_BASE, eventNotification.EVENT_NOTIFICATIONS_TEMPLATE_BASE, -2>eventNotification.SYSTEM_ADMIN_EVENT_NOTIFICATION_BASE, -2>PARTNER_-2_GROUP_*_PERMISSION
 
 permissionItem7.service = eventnotification_eventnotificationtemplate
 permissionItem7.action = listbypartner
