Additional changes to support Wowza eCDN

--- a/configurations/local.template.ini
+++ b/configurations/local.template.ini
@@ -35,6 +35,7 @@ query_cache_invalidate_on_change = false
 
 global_cache_dir = @WEB_DIR@/cache/ 
 temp_folder = @TMP_DIR@
+uploaded_segment_destination = @WEB_DIR@/tmp/convert/
 
 apphome_url = @SERVICE_URL@
 apphome_url_no_protocol = @KALTURA_VIRTUAL_HOST_NAME@
