Code review changes

--- a/deployment/permissions/service.livestream.ini
+++ b/deployment/permissions/service.livestream.ini
@@ -74,17 +74,17 @@ permissionItem8.permissions = CONTENT_MANAGE_THUMBNAIL, BASE_USER_SESSION_PERMIS
 permissionItem9.service = livestream
 permissionItem9.action = registerMediaServer
 permissionItem9.partnerId = 0
-permissionItem9.permissions = MEDIA_SERVER_BASE, -5>PARTNER_-5_GROUP_*_PERMISSION,MEDIA_SERVER_PARTNER_LEVEL
+permissionItem9.permissions = -5>MEDIA_SERVER_BASE, -5>PARTNER_-5_GROUP_*_PERMISSION,MEDIA_SERVER_PARTNER_LEVEL
 
 permissionItem10.service = livestream
 permissionItem10.action = unregisterMediaServer
 permissionItem10.partnerId = 0
-permissionItem10.permissions = MEDIA_SERVER_BASE, -5>PARTNER_-5_GROUP_*_PERMISSION,MEDIA_SERVER_PARTNER_LEVEL
+permissionItem10.permissions = -5>MEDIA_SERVER_BASE, -5>PARTNER_-5_GROUP_*_PERMISSION,MEDIA_SERVER_PARTNER_LEVEL
 
 permissionItem11.service = livestream
 permissionItem11.action = appendRecording
 permissionItem11.partnerId = 0
-permissionItem11.permissions = MEDIA_SERVER_BASE, -5>PARTNER_-5_GROUP_*_PERMISSION,MEDIA_SERVER_PARTNER_LEVEL
+permissionItem11.permissions = -5>MEDIA_SERVER_BASE, -5>PARTNER_-5_GROUP_*_PERMISSION,MEDIA_SERVER_PARTNER_LEVEL
 
 permissionItem12.service = livestream
 permissionItem12.action = validateRegisteredMediaServers
@@ -94,5 +94,5 @@ permissionItem12.permissions = BATCH_BASE, PARTNER_-1_GROUP_*_PERMISSION
 permissionItem13.service = livestream
 permissionItem13.action = authenticate
 permissionItem13.partnerId = 0
-permissionItem13.permissions = MEDIA_SERVER_BASE, -5>PARTNER_-5_GROUP_*_PERMISSION, MEDIA_SERVER_PARTNER_LEVEL
+permissionItem13.permissions = -5>MEDIA_SERVER_BASE, -5>PARTNER_-5_GROUP_*_PERMISSION, MEDIA_SERVER_PARTNER_LEVEL
 
