--- a/configurations/generator.ini
+++ b/configurations/generator.ini
@@ -13,6 +13,14 @@
 ; #################################################
 
 [all]
+exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk
+
+[public : all]
+excludepaths = plugins/content_distribution/providers
+ignore = KalturaUploadedFileResource, KalturaCopyJobData
+generateDocs = true
+package = Kaltura
+subpackage = Client
 
 [filters  :  all]
 generator = FiltersGenerator
@@ -45,7 +53,6 @@ clearPath = admin_console/lib/Kaltura/Client
 
 [as3FlexClient : all]
 generator = Xml2As3ClientGenerator
-exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk
 params.type = flex_client
 ignore = KalturaUploadedFileResource, KalturaCopyJobData
 generateDocs = true
@@ -54,119 +61,59 @@ generateDocs = true
 internal = true
 nopackage = true
 
-[xml : all]
+[xml : public]
 generator = XmlClientGenerator
-exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk
-excludepaths = plugins/content_distribution/providers
-ignore = KalturaUploadedFileResource, KalturaCopyJobData
 internal = true
 nopackage = true
 nofolder = true
 
-[php5 : all]
+[php5 : public]
 generator = Php5ClientGenerator
-exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk
-excludepaths = plugins/content_distribution/providers
-ignore = KalturaUploadedFileResource, KalturaCopyJobData
-generateDocs = true
-package = Kaltura
-subpackage = Client
 copyPath = clients/php5
 
-[php53 : all]
+[php53 : public]
 generator = Php53ClientGenerator
-exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk
-excludepaths = plugins/content_distribution/providers
-ignore = KalturaUploadedFileResource, KalturaCopyJobData
-generateDocs = true
-package = Kaltura
-subpackage = Client
 
-[php5Zend : all]
+[php5Zend : public]
 generator = PhpZendClientGenerator
-exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk
-excludepaths = plugins/content_distribution/providers
-ignore = KalturaUploadedFileResource, KalturaCopyJobData
-generateDocs = true
-package = Kaltura
-subpackage = Client
 
-[php4 : all]
+[php4 : public]
 generator = Php4ClientGenerator
-exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk
-excludepaths = plugins/content_distribution/providers
-ignore = KalturaUploadedFileResource, KalturaCopyJobData
-generateDocs = true
-package = Kaltura
-subpackage = Client
 
-[csharp : all]
+[csharp : public]
 generator = CSharpClientGenerator
-exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk
-excludepaths = plugins/content_distribution/providers
-ignore = KalturaUploadedFileResource, KalturaCopyJobData
-generateDocs = true
 
-[ruby : all]
+[ruby : public]
 generator = RubyClientGenerator
-exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk
-excludepaths = plugins/content_distribution/providers
-ignore = KalturaUploadedFileResource, KalturaCopyJobData
-generateDocs = true
 
-[java : all]
+[java : public]
 generator = JavaClientGenerator
-exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk
-excludepaths = plugins/content_distribution/providers
-ignore = KalturaUploadedFileResource, KalturaCopyJobData
-generateDocs = true
 
-[android : all]
+[android : public]
 generator = AndroidClientGenerator
-exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk
-excludepaths = plugins/content_distribution/providers
-ignore = KalturaUploadedFileResource, KalturaCopyJobData
-generateDocs = true
 linkhref = https://github.com/kaltura/AndroidReferenceApp
 linktext = "Sample app on GitHub"
 
-[flex35 : all]
+[flex35 : public]
 generator = Xml2As3ClientGenerator
-exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk
-excludepaths = plugins/content_distribution/providers
 params.type = flex_client
-ignore = KalturaUploadedFileResource, KalturaCopyJobData
-generateDocs = true
 
-[js : all]
+[js : public]
 generator = JsClientGenerator
-exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk
-excludepaths = plugins/content_distribution/providers
-ignore = KalturaUploadedFileResource, KalturaCopyJobData
-generateDocs = true
 
-[python : all]
+[python : public]
 generator = PythonClientGenerator
-exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk
-excludepaths = plugins/content_distribution/providers
-ignore = KalturaUploadedFileResource, KalturaCopyJobData
-generateDocs = true
 
-[objc : all]
+[objc : public]
 generator = ObjCClientGenerator
-exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk, document.*
-excludepaths = plugins/content_distribution/providers
-ignore = KalturaUploadedFileResource, KalturaCopyJobData
-generateDocs = true
 linkhref = https://github.com/kaltura/IOSReferenceApp
 linktext = "Sample app on GitHub"
 
-[cli : all]
+[cli : public]
 generator = CliClientGenerator
-exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk, document.*
-excludepaths = plugins/content_distribution/providers
-ignore = KalturaUploadedFileResource, KalturaCopyJobData
-generateDocs = true
+
+[node : public]
+generator = NodeClientGenerator
 
 [php5ZendVarConsole : all]
 generator = PhpZendClientGenerator
@@ -180,15 +127,10 @@ nopackage = true
 copyPath = var_console/lib
 clearPath = var_console/lib/Kaltura/Client
 
-[php5ZendHostedPages : all]
+[php5ZendHostedPages : public]
 generator = PhpZendClientGenerator
-exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk
-excludepaths = plugins/content_distribution/providers
-ignore = KalturaUploadedFileResource, KalturaCopyJobData
 additional = KalturaPermissionName
-generateDocs = true
 package = HostedPages
-subpackage = Client
 internal = true
 nopackage = true
 
@@ -199,3 +141,6 @@ additional = KalturaBatchJobAppErrors, KalturaBulkUploadType, KalturaConversionE
 internal = true
 nopackage = true
 copyPath = tests/lib
+
+[nodePlayServer : node]
+include = cuePoint_cuePoint.list
