Studio should be enabled by default.

--- a/deployment/base/scripts/init_data/02.Permission.ini
+++ b/deployment/base/scripts/init_data/02.Permission.ini
@@ -267,3 +267,18 @@ description="Time Based - Annotations"
 partnerId=99
 status=1
 
+[99_FEATURE_V2_FLAVORS]
+type=2
+name=99_FEATURE_V2_FLAVORS
+friendlyName="V2 flavor set"
+description="V2 flavor set"
+partnerId=99
+status=1
+
+[99_FEATURE_SHOW_FLASH_STUDIO]
+type=2
+name=FEATURE_SHOW_FLASH_STUDIO
+friendlyName="Studio - Flash"
+description="Flash Studio"
+partnerId=99
+status=1
