monit needs the full path to the service command, i.e /sbin/service. also, unless we change hard coded with path "/usr/sbin/httpd" no point for the @APACHE_SERVICE@ place holder as in other distributions, for instance Debian/Ubuntu, the daemon's name is 'apache2' and so is its init script under /usr/sbin.

--- a/configurations/monit/monit.d/httpd.template.rc
+++ b/configurations/monit/monit.d/httpd.template.rc
@@ -1,7 +1,7 @@
         check process apache
            with pidfile "/var/run/httpd/httpd.pid"
-           start program = "service @APACHE_SERVICE@ start" with timeout 60 seconds
-           stop program = "service @APACHE_SERVICE@ stop"
+           start program = "/sbin/service httpd start" with timeout 60 seconds
+           stop program = "/sbin/service httpd stop"
            #if 10 restarts within 10 cycles then timeout
            #if totalmem > 100 Mb then alert
            #if children > 255 for 5 cycles then stop
