--- a/configurations/monit/monit.d/httpd.template.rc
+++ b/configurations/monit/monit.d/httpd.template.rc
@@ -1,5 +1,5 @@
         check process apache
-           with pidfile "@PID_FILE@"
+           with pidfile "@APACHE_PID_PATH@"
            start program = "/sbin/service @APACHE_SERVICE@ start" with timeout 60 seconds
            stop program = "/sbin/service @APACHE_SERVICE@ stop"
            #if 10 restarts within 10 cycles then timeout
