changed sleep time for scheduled task priodic worker to 6 hours

--- a/configurations/batch/batch.ini.template
+++ b/configurations/batch/batch.ini.template
@@ -682,6 +682,7 @@ params.sharedTempPath 								= @TMP_DIR@/scheduledtasks
 type												= KScheduledTaskRunner
 maximumExecutionTime								= 600
 scriptPath											= ../plugins/scheduled_task/batch/ScheduledTaskRunner/KScheduledTaskRunnerExe.php
+sleepBetweenStopStart								= 21600
 
 [KAsyncSyncCategoryPrivacyContext : JobHandlerWorker]
 id													= 550
