Added draftEntryConversionProfileSelection permission PLAT-823 #time 5m

--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -646,6 +646,14 @@ moduls.showFlashStudio.basePermissionType =
 moduls.showFlashStudio.basePermissionName =
 moduls.showFlashStudio.group = GROUP_ENABLE_DISABLE_FEATURES
 
+moduls.draftEntryConversionProfileSelection.enabled = true
+moduls.draftEntryConversionProfileSelection.permissionType = 2
+moduls.draftEntryConversionProfileSelection.label = Enable KMC transcoding profile selection for draft entries
+moduls.draftEntryConversionProfileSelection.permissionName = FEATURE_DRAFT_ENTRY_CONV_PROF_SELECTION
+moduls.draftEntryConversionProfileSelection.basePermissionType =
+moduls.draftEntryConversionProfileSelection.basePermissionName =
+moduls.draftEntryConversionProfileSelection.group = GROUP_ENABLE_DISABLE_FEATURES
+
 ; ACCESS PERMISSIONS
 
 access.error = *
