New parameters and permissions in order to enable multicast

--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -663,6 +663,15 @@ moduls.draftEntryConversionProfileSelection.basePermissionType =
 moduls.draftEntryConversionProfileSelection.basePermissionName =
 moduls.draftEntryConversionProfileSelection.group = GROUP_ENABLE_DISABLE_FEATURES
 
+
+moduls.pushPublish.enabled = true
+moduls.pushPublish.permissionType = 2
+moduls.pushPublish.label = Hybrid eCDN Architecture
+moduls.pushPublish.permissionName = FEATURE_PUSH_PUBLISH
+moduls.pushPublish.basePermissionType =
+moduls.pushPublish.basePermissionName =
+moduls.pushPublish.group = GROUP_ENABLE_DISABLE_FEATURES
+
 ; ACCESS PERMISSIONS
 
 access.error = *
