--- a/deployment/permissions/partner.0.ini
+++ b/deployment/permissions/partner.0.ini
@@ -1235,3 +1235,11 @@ permission191.dependsOnPermissionNames = HYBRID_ECDN
 permission191.tags = 
 permission191.partnerGroup =
 
+permission192.partnerId = 0
+permission192.type = 1
+permission192.name = PUSH_PUBLISH_PERMISSION
+permission192.friendlyName = "PushPublish permission"
+permission192.description = "PushPublish permission"
+permission192.dependsOnPermissionNames = FEATURE_PUSH_PUBLISH
+permission192.tags = 
+permission192.partnerGroup =
