--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -688,6 +688,7 @@ access.partner.configure-general-information = systemPartner.SYSTEM_ADMIN_PUBLIS
 access.partner.configure-account-packages-service = systemPartner.SYSTEM_ADMIN_PUBLISHER_CONFIG_PACKAGES_SERVICE
 access.partner.configure-account-packages-service-paid = systemPartner.SYSTEM_ADMIN_PUBLISHER_CONFIG_PACKAGES_SERVICE_PAID
 access.partner.configure-account-options-monitor-usage = systemPartner.SYSTEM_ADMIN_PUBLISHER_CONFIG_OPTIONS_MONITOR_USAGE
+access.partner.configure-account-options-monitor-view = SYSTEM_ADMIN_BASE
 access.partner.update-status = SYSTEM_ADMIN_PUBLISHER_CONFIG
 access.partner.block = SYSTEM_ADMIN_PUBLISHER_BLOCK
 access.partner.remove = SYSTEM_ADMIN_PUBLISHER_REMOVE
