changed feature permission name

--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -650,7 +650,7 @@ moduls.showFlashStudio.group = GROUP_ENABLE_DISABLE_FEATURES
 moduls.hybridEcdn.enabled = true
 moduls.hybridEcdn.permissionType = 2
 moduls.hybridEcdn.label = Hybrid eCDN Architecture
-moduls.hybridEcdn.permissionName = HYBRID_ECDN
+moduls.hybridEcdn.permissionName = FEATURE_HYBRID_ECDN
 moduls.hybridEcdn.basePermissionType =
 moduls.hybridEcdn.basePermissionName =
 moduls.hybridEcdn.group = GROUP_ENABLE_DISABLE_FEATURES
@@ -666,10 +666,10 @@ moduls.draftEntryConversionProfileSelection.group = GROUP_ENABLE_DISABLE_FEATURE
 
 moduls.pushPublish.enabled = true
 moduls.pushPublish.permissionType = 2
-moduls.pushPublish.label = Hybrid eCDN Architecture
+moduls.pushPublish.label = Enable Live Stream push-publish functionality
 moduls.pushPublish.permissionName = FEATURE_PUSH_PUBLISH
-moduls.pushPublish.basePermissionType =
-moduls.pushPublish.basePermissionName =
+moduls.pushPublish.basePermissionType = 2
+moduls.pushPublish.basePermissionName = FEATURE_HYBRID_ECDN
 moduls.pushPublish.group = GROUP_ENABLE_DISABLE_FEATURES
 
 ; ACCESS PERMISSIONS
