--- a/deployment/permissions/partner.0.ini
+++ b/deployment/permissions/partner.0.ini
@@ -1231,7 +1231,7 @@ permission191.type = 1
 permission191.name = MEDIA_SERVER_PARTNER_LEVEL
 permission191.friendlyName = "Media Server partner-level permission"
 permission191.description = "Media Server partner-level permission"
-permission191.dependsOnPermissionNames = HYBRID_ECDN
+permission191.dependsOnPermissionNames = FEATURE_HYBRID_ECDN
 permission191.tags = 
 permission191.partnerGroup =
 
