Fixed admin-console and media-space client libs

--- a/configurations/generator.ini
+++ b/configurations/generator.ini
@@ -39,7 +39,7 @@ internal = true
 nopackage = true
 copyPath = batch/client
 
-[php5ZendClientAdminConsole : all]
+[php5ZendClientAdminConsole]
 generator = PhpZendClientGenerator
 ignore = KalturaUploadedFileResource, KalturaCopyJobData
 additional = KalturaBatchJobAppErrors, KalturaBulkUploadType, KalturaConversionEngineType, KalturaInvestigateEntryData, KalturaPermissionName, KalturaObjectFeatureType
@@ -76,6 +76,13 @@ generator = Php53ClientGenerator
 
 [php5Zend : public]
 generator = PhpZendClientGenerator
+
+[php5ZendMediaSpace]
+generator = PhpZendClientGenerator
+ignore = KalturaUploadedFileResource, KalturaCopyJobData
+generateDocs = true
+package = Kaltura
+subpackage = Client
 
 [php4 : public]
 generator = Php4ClientGenerator
@@ -143,4 +150,4 @@ nopackage = true
 copyPath = tests/lib
 
 [nodePlayServer : node]
-include = cuePoint_cuePoint.list
+include = cuePoint_cuePoint.list, session.start
