--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -672,6 +672,14 @@ moduls.pushPublish.basePermissionType = 2
 moduls.pushPublish.basePermissionName = FEATURE_HYBRID_ECDN
 moduls.pushPublish.group = GROUP_ENABLE_DISABLE_FEATURES
 
+moduls.blockThumbnailCapture.enabled = true
+moduls.blockThumbnailCapture.permissionType = 2
+moduls.blockThumbnailCapture.label = Block thumbnail capture
+moduls.blockThumbnailCapture.permissionName = FEATURE_BLOCK_THUMBNAIL_CAPTURE
+moduls.blockThumbnailCapture.basePermissionType =
+moduls.blockThumbnailCapture.basePermissionName =
+moduls.blockThumbnailCapture.group = GROUP_ENABLE_DISABLE_FEATURES
+
 ; ACCESS PERMISSIONS
 
 access.error = *
