--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -199,7 +199,7 @@ moduls.entitlement.group = GROUP_ENABLE_DISABLE_FEATURES
 
 moduls.categoryLimit.enabled = true
 moduls.categoryLimit.permissionType = 2
-moduls.categoryLimit.label = Disble Category Limit
+moduls.categoryLimit.label = Disable Category Limit
 moduls.categoryLimit.permissionName = FEATURE_DISABLE_CATEGORY_LIMIT
 moduls.categoryLimit.basePermissionType =
 moduls.categoryLimit.basePermissionName =
