Missing permission item for 'all'

--- a/deployment/permissions/object.KalturaLiveAsset.ini
+++ b/deployment/permissions/object.KalturaLiveAsset.ini
@@ -52,3 +52,21 @@ permissionItem6.param4 =
 permissionItem6.param5 = 
 permissionItem6.tags = 
 permissionItem6.permissions = PUSH_PUBLISH_PERMISSION
+
+permissionItem7.object = KalturaLiveAsset
+permissionItem7.parameter = multicastPort
+permissionItem7.action = all
+permissionItem7.partnerId = 0
+permissionItem7.param4 = 
+permissionItem7.param5 = 
+permissionItem7.tags = 
+permissionItem7.permissions = PUSH_PUBLISH_PERMISSION
+
+permissionItem8.object = KalturaLiveAsset
+permissionItem8.parameter = multicastIP
+permissionItem8.action = all
+permissionItem8.partnerId = 0
+permissionItem8.param4 = 
+permissionItem8.param5 = 
+permissionItem8.tags = 
+permissionItem8.permissions = PUSH_PUBLISH_PERMISSION
