Add permission to create live stream sync points

--- a/deployment/permissions/partner.0.ini
+++ b/deployment/permissions/partner.0.ini
@@ -1243,3 +1243,10 @@ permission192.description = "PushPublish permission"
 permission192.dependsOnPermissionNames = FEATURE_PUSH_PUBLISH
 permission192.tags = 
 permission192.partnerGroup =
+
+permission193.partnerId = 0
+permission193.type = 1
+permission193.name = LIVE_STREAM_CREATE_SYNC_POINTS
+permission193.friendlyName = "Create live stream sync-points"
+permission193.description = "Create live stream sync-points"
+permission193.dependsOnPermissionNames = FEATURE_PUSH_PUBLISH
