--- a/deployment/permissions/service.livestream.ini
+++ b/deployment/permissions/service.livestream.ini
@@ -96,3 +96,8 @@ permissionItem13.action = authenticate
 permissionItem13.partnerId = 0
 permissionItem13.permissions = -5>MEDIA_SERVER_BASE, -5>PARTNER_-5_GROUP_*_PERMISSION, MEDIA_SERVER_PARTNER_LEVEL
 
+
+permissionItem14.service = livestream
+permissionItem14.action = createPeriodicSyncPoints
+permissionItem14.partnerId = 0
+permissionItem14.permissions = LIVE_STREAM_CREATE_SYNC_POINTS
